--- a/SelfBalancingRobot/platformio.ini
+++ b/SelfBalancingRobot/platformio.ini
@@ -12,4 +12,7 @@
 platform = atmelavr
 board = uno
 framework = arduino
-
+;[env:megaatmega2560]
+;platform = atmelavr
+;board = megaatmega2560
+;framework = arduino
